--- a/app/src/main/res/layout/activity_cart.xml
+++ b/app/src/main/res/layout/activity_cart.xml
@@ -40,41 +40,45 @@
             <TextView
                 android:paddingHorizontal="10dp"
                 android:paddingVertical="3dp"
-                android:id="@+id/text_view_total"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="@+id/button_create_order_cart"
-                app:layout_constraintBottom_toBottomOf="@+id/button_create_order_cart"
-                android:background="@drawable/background_button_corner_primary"
-                android:textColor="@color/white"
+                app:layout_constraintTop_toTopOf="@+id/text_view_total_price_cart"
+                app:layout_constraintBottom_toBottomOf="@+id/text_view_total_price_cart"
                 android:gravity="center"
-                android:layout_width="100dp"
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:textSize="18sp"
-                android:text="Tổng"/>
+                android:textAllCaps="true"
+                android:text="Thành tiền"/>
 
             <TextView
-                android:layout_marginStart="5dp"
-                app:layout_constraintStart_toEndOf="@+id/text_view_total"
-                app:layout_constraintTop_toTopOf="@+id/button_create_order_cart"
-                app:layout_constraintBottom_toBottomOf="@+id/button_create_order_cart"
-                android:id="@+id/text_view_totalPrice_cart"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:textSize="16sp"
-                android:text="10,000 VND"/>
-
-            <TextView
-                android:background="@drawable/background_create_oder"
+                android:paddingHorizontal="10dp"
+                android:background="@drawable/background_button_corner_primary"
                 android:textColor="#FFFFFF"
-                android:id="@+id/button_create_order_cart"
+                android:id="@+id/text_view_total_price_cart"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
-                android:layout_width="150dp"
-                android:layout_height="50dp"
+                android:layout_width="wrap_content"
+                android:layout_height="40dp"
                 android:gravity="center"
                 android:textAllCaps="true"
-                android:textSize="16sp"
-                android:text="Tạo đơn hàng"/>
+                android:textSize="20sp"
+                tools:text="200,000 VND"/>
+
+            <TextView
+                android:id="@+id/button_create_order_cart"
+                android:textColor="#FFFFFF"
+                android:layout_marginTop="5dp"
+                android:paddingVertical="10dp"
+                android:background="@drawable/background_create_oder"
+                android:gravity="center"
+                android:textSize="20sp"
+                android:textAllCaps="true"
+                android:text="Tạo đơn hàng"
+                app:layout_constraintTop_toBottomOf="@+id/text_view_total_price_cart"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"/>
         </androidx.constraintlayout.widget.ConstraintLayout>
     </LinearLayout>
 
