--- a/app/src/main/res/layout/layout_detail_order_history.xml
+++ b/app/src/main/res/layout/layout_detail_order_history.xml
@@ -81,24 +81,16 @@
             app:layout_constraintStart_toEndOf="@id/card_view_image">
 
             <TextView
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="@+id/text_view_total_price"
-                app:layout_constraintBottom_toBottomOf="@+id/text_view_total_price"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:paddingLeft="5dp"
-                android:text="Thành tiền" />
-
-            <TextView
-                android:layout_marginEnd="10dp"
+                android:layout_marginEnd="5dp"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 android:id="@+id/text_view_total_price"
-                android:layout_width="wrap_content"
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:background="@drawable/background_button_corner_primary"
                 android:paddingHorizontal="20dp"
                 android:paddingVertical="3dp"
+                android:textColor="#FFFFFF"
                 tools:text="10,000 VND" />
 
         </androidx.constraintlayout.widget.ConstraintLayout>
