--- a/app/src/main/res/layout/layout_item_cart.xml
+++ b/app/src/main/res/layout/layout_item_cart.xml
@@ -75,14 +75,12 @@
             app:layout_constraintTop_toBottomOf="@id/textViewPrice_cart"
             app:layout_constraintLeft_toRightOf="@id/cardViewImage_cart">
 
-            <TextView
-                android:id="@+id/text_view_down"
+            <ImageView
+                android:src="@drawable/icon_down"
+                android:id="@+id/image_view_down"
                 android:gravity="center"
-                android:background="@drawable/background_quantity"
-                android:layout_width="30dp"
-                android:layout_height="20dp"
-                android:textSize="14sp"
-                android:text="-"/>
+                android:layout_width="25dp"
+                android:layout_height="25dp"/>
 
             <TextView
                 android:layout_marginHorizontal="5dp"
@@ -90,18 +88,17 @@
                 android:textStyle="italic"
                 android:textColor="#040404"
                 android:id="@+id/quantity_cart"
+                android:textSize="16sp"
                 tools:text="99"
-                android:layout_width="20dp"
-                android:layout_height="20dp"/>
+                android:layout_width="25dp"
+                android:layout_height="25dp"/>
 
-            <TextView
-                android:id="@+id/text_view_up"
+            <ImageView
+                android:src="@drawable/icon_up"
+                android:id="@+id/image_view_up"
                 android:gravity="center"
-                android:background="@drawable/background_quantity"
-                android:layout_width="30dp"
-                android:layout_height="20dp"
-                android:textSize="14sp"
-                android:text="+"/>
+                android:layout_width="25dp"
+                android:layout_height="25dp"/>
         </LinearLayout>
 
         <LinearLayout
@@ -110,24 +107,20 @@
             android:layout_width="wrap_content"
             android:layout_height="35dp"
             android:gravity="center"
-            app:layout_constraintLeft_toRightOf="@id/cardViewImage_cart"
+            app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/layout_quantity_cart"
             app:layout_constraintBottom_toBottomOf="parent">
 
             <TextView
-                android:paddingHorizontal="20dp"
+                android:textColor="#FFFFFF"
+                android:layout_marginEnd="5dp"
+                android:paddingHorizontal="10dp"
                 android:paddingVertical="3dp"
-                android:paddingLeft="5dp"
                 android:background="@drawable/background_button_corner_primary"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Thành tiền"
-                android:textColor="@color/white" />
-
-            <TextView
                 android:id="@+id/text_view_totalPriceProduct_cart"
                 android:layout_marginLeft="5dp"
                 android:layout_width="wrap_content"
+                android:textSize="16sp"
                 android:layout_height="wrap_content"
                 tools:text="10,000 VND"/>
         </LinearLayout>
