--- a/app/src/main/res/menu/menu_home.xml
+++ b/app/src/main/res/menu/menu_home.xml
@@ -1,6 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
+
+    <item
+        android:icon="@drawable/icon_log_out"
+        app:showAsAction="always"
+        android:title="Log out"
+        android:id="@+id/item_log_out"/>
+
     <item
         android:icon="@drawable/ic_history_order"
         app:showAsAction="always"
