--- a/app/src/main/res/layout/activity_cart.xml
+++ b/app/src/main/res/layout/activity_cart.xml
@@ -1,96 +1,126 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".presentation.view.activity.CartActivity"
-    android:paddingVertical="5dp"
-    android:orientation="vertical">
+    android:paddingVertical="5dp">
 
-    <TextView
-        android:id="@+id/text_view_list"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        android:layout_weight="1"
-        android:gravity="center"
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:visibility="gone"
+        android:id="@+id/layout_cart"
         android:layout_width="match_parent"
-        android:layout_height="45dp"
-        android:textAllCaps="true"
-        android:textSize="22sp"
-        android:text="Danh sách giỏ hàng"/>
+        android:layout_height="match_parent">
 
-    <androidx.recyclerview.widget.RecyclerView
-        app:layout_constraintTop_toBottomOf="@+id/text_view_list"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintBottom_toTopOf="@+id/layout_total_price_cart"
-        android:layout_weight="8"
-        android:id="@+id/recycler_view_cart"
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
-        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
-        tools:listitem="@layout/layout_item_cart" />
+        <TextView
+            android:id="@+id/text_view_list"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            android:layout_weight="1"
+            android:gravity="center"
+            android:layout_width="match_parent"
+            android:layout_height="45dp"
+            android:textAllCaps="true"
+            android:textSize="22sp"
+            android:text="Danh sách giỏ hàng"/>
 
-    <LinearLayout
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        android:id="@+id/layout_total_price_cart"
-        android:layout_marginTop="5dp"
-        android:layout_marginHorizontal="10dp"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        <androidx.recyclerview.widget.RecyclerView
+            app:layout_constraintTop_toBottomOf="@+id/text_view_list"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintBottom_toTopOf="@+id/layout_total_price_cart"
+            android:layout_weight="8"
+            android:id="@+id/recycler_view_cart"
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+            tools:listitem="@layout/layout_item_cart" />
 
-        <androidx.constraintlayout.widget.ConstraintLayout
+        <LinearLayout
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            android:id="@+id/layout_total_price_cart"
+            android:layout_marginTop="5dp"
+            android:layout_marginHorizontal="10dp"
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
 
-            <TextView
-                android:paddingHorizontal="10dp"
-                android:paddingVertical="3dp"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="@+id/text_view_total_price_cart"
-                app:layout_constraintBottom_toBottomOf="@+id/text_view_total_price_cart"
-                android:gravity="center"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:textSize="18sp"
-                android:textAllCaps="true"
-                android:text="Thành tiền"/>
-
-            <TextView
-                android:paddingHorizontal="10dp"
-                android:background="@drawable/background_button_corner_primary"
-                android:textColor="#FFFFFF"
-                android:id="@+id/text_view_total_price_cart"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintTop_toTopOf="parent"
-                android:layout_width="wrap_content"
-                android:layout_height="40dp"
-                android:gravity="center"
-                android:textAllCaps="true"
-                android:textSize="20sp"
-                tools:text="200,000 VND"/>
-
-            <TextView
-                android:id="@+id/button_create_order_cart"
-                android:textColor="#FFFFFF"
-                android:layout_marginTop="5dp"
-                android:paddingVertical="10dp"
-                android:background="@drawable/background_create_oder"
-                android:gravity="center"
-                android:textSize="20sp"
-                android:textAllCaps="true"
-                android:text="Tạo đơn hàng"
-                app:layout_constraintTop_toBottomOf="@+id/text_view_total_price_cart"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"
+            <androidx.constraintlayout.widget.ConstraintLayout
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"/>
-        </androidx.constraintlayout.widget.ConstraintLayout>
-    </LinearLayout>
+                android:layout_height="wrap_content">
+
+                <TextView
+                    android:paddingHorizontal="10dp"
+                    android:paddingVertical="3dp"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toTopOf="@+id/text_view_total_price_cart"
+                    app:layout_constraintBottom_toBottomOf="@+id/text_view_total_price_cart"
+                    android:gravity="center"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:textSize="18sp"
+                    android:textAllCaps="true"
+                    android:text="Thành tiền"/>
+
+                <TextView
+                    android:paddingHorizontal="10dp"
+                    android:background="@drawable/background_button_corner_primary"
+                    android:textColor="#FFFFFF"
+                    android:id="@+id/text_view_total_price_cart"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintTop_toTopOf="parent"
+                    android:layout_width="wrap_content"
+                    android:layout_height="40dp"
+                    android:gravity="center"
+                    android:textAllCaps="true"
+                    android:textSize="20sp"
+                    tools:text="200,000 VND"/>
+
+                <TextView
+                    android:id="@+id/button_create_order_cart"
+                    android:textColor="#FFFFFF"
+                    android:layout_marginTop="5dp"
+                    android:paddingVertical="10dp"
+                    android:background="@drawable/background_create_oder"
+                    android:gravity="center"
+                    android:textSize="20sp"
+                    android:textAllCaps="true"
+                    android:text="Tạo đơn hàng"
+                    app:layout_constraintTop_toBottomOf="@+id/text_view_total_price_cart"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"/>
+            </androidx.constraintlayout.widget.ConstraintLayout>
+        </LinearLayout>
+    </androidx.constraintlayout.widget.ConstraintLayout>
+
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:visibility="gone"
+        android:id="@+id/layout_null_cart"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+
+        <ImageView
+            app:layout_constraintBottom_toBottomOf="parent"
+            android:layout_marginBottom="100dp"
+            android:src="@drawable/cart_invisible"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"/>
+
+        <TextView
+            android:layout_marginBottom="200dp"
+            android:textSize="20dp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            android:text="Thêm sản phẩm mới"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"/>
+    </androidx.constraintlayout.widget.ConstraintLayout>
 
     <include
         android:id="@+id/layout_loading"
         layout="@layout/layout_loading"
         android:visibility="gone" />
-</androidx.constraintlayout.widget.ConstraintLayout>
+</FrameLayout>
