--- a/app/src/main/res/layout/activity_cart.xml
+++ b/app/src/main/res/layout/activity_cart.xml
@@ -8,8 +8,6 @@
     android:paddingVertical="5dp">
 
     <androidx.constraintlayout.widget.ConstraintLayout
-        android:visibility="gone"
-        android:id="@+id/layout_cart"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
@@ -25,75 +23,86 @@
             android:textSize="22sp"
             android:text="Danh sách giỏ hàng"/>
 
-        <androidx.recyclerview.widget.RecyclerView
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:visibility="gone"
             app:layout_constraintTop_toBottomOf="@+id/text_view_list"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintBottom_toTopOf="@+id/layout_total_price_cart"
-            android:layout_weight="8"
-            android:id="@+id/recycler_view_cart"
-            android:layout_width="match_parent"
-            android:layout_height="0dp"
-            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
-            tools:listitem="@layout/layout_item_cart" />
-
-        <LinearLayout
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            android:id="@+id/layout_total_price_cart"
-            android:layout_marginTop="5dp"
-            android:layout_marginHorizontal="10dp"
+            android:id="@+id/layout_cart"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+            android:layout_height="0dp">
 
-            <androidx.constraintlayout.widget.ConstraintLayout
+            <androidx.recyclerview.widget.RecyclerView
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintBottom_toTopOf="@+id/layout_total_price_cart"
+                android:id="@+id/recycler_view_cart"
+                android:layout_width="match_parent"
+                android:layout_height="0dp"
+                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+                tools:listitem="@layout/layout_item_cart" />
+
+            <LinearLayout
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                android:id="@+id/layout_total_price_cart"
+                android:layout_marginTop="5dp"
+                android:layout_marginHorizontal="10dp"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content">
 
-                <TextView
-                    android:paddingHorizontal="10dp"
-                    android:paddingVertical="3dp"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toTopOf="@+id/text_view_total_price_cart"
-                    app:layout_constraintBottom_toBottomOf="@+id/text_view_total_price_cart"
-                    android:gravity="center"
-                    android:layout_width="0dp"
-                    android:layout_height="wrap_content"
-                    android:textSize="18sp"
-                    android:textAllCaps="true"
-                    android:text="Thành tiền"/>
-
-                <TextView
-                    android:paddingHorizontal="10dp"
-                    android:background="@drawable/background_button_corner_primary"
-                    android:textColor="#FFFFFF"
-                    android:id="@+id/text_view_total_price_cart"
-                    app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintTop_toTopOf="parent"
-                    android:layout_width="wrap_content"
-                    android:layout_height="40dp"
-                    android:gravity="center"
-                    android:textAllCaps="true"
-                    android:textSize="20sp"
-                    tools:text="200,000 VND"/>
-
-                <TextView
-                    android:id="@+id/button_create_order_cart"
-                    android:textColor="#FFFFFF"
-                    android:layout_marginTop="5dp"
-                    android:paddingVertical="10dp"
-                    android:background="@drawable/background_create_oder"
-                    android:gravity="center"
-                    android:textSize="20sp"
-                    android:textAllCaps="true"
-                    android:text="Tạo đơn hàng"
-                    app:layout_constraintTop_toBottomOf="@+id/text_view_total_price_cart"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintEnd_toEndOf="parent"
+                <androidx.constraintlayout.widget.ConstraintLayout
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"/>
-            </androidx.constraintlayout.widget.ConstraintLayout>
-        </LinearLayout>
+                    android:layout_height="wrap_content">
+
+                    <TextView
+                        android:paddingHorizontal="10dp"
+                        android:paddingVertical="3dp"
+                        app:layout_constraintStart_toStartOf="parent"
+                        app:layout_constraintTop_toTopOf="@+id/text_view_total_price_cart"
+                        app:layout_constraintBottom_toBottomOf="@+id/text_view_total_price_cart"
+                        android:gravity="center"
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+                        android:textSize="18sp"
+                        android:textAllCaps="true"
+                        android:text="Thành tiền"/>
+
+                    <TextView
+                        android:paddingHorizontal="10dp"
+                        android:background="@drawable/background_button_corner_primary"
+                        android:textColor="#FFFFFF"
+                        android:id="@+id/text_view_total_price_cart"
+                        app:layout_constraintEnd_toEndOf="parent"
+                        app:layout_constraintTop_toTopOf="parent"
+                        android:layout_width="wrap_content"
+                        android:layout_height="40dp"
+                        android:gravity="center"
+                        android:textAllCaps="true"
+                        android:textSize="20sp"
+                        tools:text="200,000 VND"/>
+
+                    <TextView
+                        android:id="@+id/button_create_order_cart"
+                        android:textColor="#FFFFFF"
+                        android:layout_marginTop="5dp"
+                        android:paddingVertical="10dp"
+                        android:background="@drawable/background_create_oder"
+                        android:gravity="center"
+                        android:textSize="20sp"
+                        android:textAllCaps="true"
+                        android:text="Tạo đơn hàng"
+                        app:layout_constraintTop_toBottomOf="@+id/text_view_total_price_cart"
+                        app:layout_constraintStart_toStartOf="parent"
+                        app:layout_constraintEnd_toEndOf="parent"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"/>
+                </androidx.constraintlayout.widget.ConstraintLayout>
+            </LinearLayout>
+        </androidx.constraintlayout.widget.ConstraintLayout>
+
     </androidx.constraintlayout.widget.ConstraintLayout>
+
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:visibility="gone"
