--- a/app/src/main/res/layout/activity_detail_order_history.xml
+++ b/app/src/main/res/layout/activity_detail_order_history.xml
@@ -30,6 +30,7 @@
         tools:listitem="@layout/layout_detail_order_history" />
 
     <LinearLayout
+        android:visibility="invisible"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         android:id="@+id/layout_total_price_order_history_cart"
