--- a/app/src/main/res/layout/layout_item_cart.xml
+++ b/app/src/main/res/layout/layout_item_cart.xml
@@ -10,6 +10,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/card_view_item_cart"
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
@@ -124,6 +125,9 @@
                 android:layout_height="wrap_content"
                 tools:text="10,000 VND"/>
         </LinearLayout>
-
     </androidx.constraintlayout.widget.ConstraintLayout>
+    <include
+        android:id="@+id/layout_loading"
+        layout="@layout/layout_loading"
+        android:visibility="gone" />
 </androidx.cardview.widget.CardView>
